--- a/html/app.html
+++ b/html/app.html
@@ -26,10 +26,10 @@
               </li>
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="{{ user.admin_url }}" class="btn btn-default btn-flat"><i class="fa fa-folder"></i> Admin</a>
+                  <a :href="user.admin_url" class="btn btn-default btn-flat"><i class="fa fa-folder"></i> Admin</a>
                 </div>
                 <div class="pull-right">
-                  <a href="{{ user.logout_url }}" class="btn btn-default btn-flat"><i class="fa fa-sign-out"></i>Sign out</a>
+                  <a :href="user.logout_url" class="btn btn-default btn-flat"><i class="fa fa-sign-out"></i>Sign out</a>
                 </div>
               </li>
             </ul>
