--- a/html/viewport.html
+++ b/html/viewport.html
@@ -3,11 +3,13 @@
   </div>
   <div id="g3w-view-content" class="g3w-view content" :style="{width:state.content.sizes.width+'px',height:state.content.sizes.height+'px'}">
     <div v-if="(showtitle && contentTitle) || previousTitle || (state.content.closable && state.content.aside)" class="close-panel-block">
-      <span v-if="showtitle && contentTitle">{{ contentTitle }}</span>
-      <div v-else class="g3w_contents_back">
-        <span v-if="previousTitle" @click="gotoPreviousContent()"><span class="glyphicon glyphicon-chevron-left"></span> Torna a {{ previousTitle }}</span>
+      <div v-if="previousTitle" class="g3w_contents_back">
+        <span  @click="gotoPreviousContent()"><span class="glyphicon glyphicon-chevron-left"></span> Torna {{ previousTitle }}</span>
       </div>
       <button v-if="state.content.closable && state.content.aside" class="glyphicon glyphicon-remove pull-right close-panel-button" @click="closeContent"></button>
+      <div v-if="showtitle && contentTitle">
+        <span>{{ contentTitle }}</span>
+      </div>
     </div>
   </div>
 </div>
