cambiato un pò di stile

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -5,12 +5,12 @@
   <a v-if="!isMobile()" href="#" class="sidebar-aside-toggle" data-toggle="offcanvas" role="button">
     <span class="sr-only">Expand</span>
   </a>
-  <!--<div class="quick-actions-menu">
-    <button class="btn btn-default btn-circle-medium glyphicon glyphicon-share-alt"></button>
-    <button class="btn btn-default btn-circle-medium glyphicon glyphicon-modal-window"></button>
-    <button class="btn btn-default btn-circle-medium glyphicon glyphicon-print"></button>
-    <button class="btn btn-default btn-circle-medium glyphicon glyphicon-search"></button>
-  </div>-->
+  <!--<div class="quick-actions-menu">-->
+    <!--<button class="btn btn-default btn-circle-medium glyphicon glyphicon-share-alt"></button>-->
+    <!--<button class="btn btn-default btn-circle-medium glyphicon glyphicon-modal-window"></button>-->
+    <!--<button class="btn btn-default btn-circle-medium glyphicon glyphicon-print"></button>-->
+    <!--<button class="btn btn-default btn-circle-medium glyphicon glyphicon-search"></button>-->
+  <!--</div>-->
 	<section class="sidebar">
     <div v-show="panelsinstack" class="g3w-sidebarpanel">
       <div style="overflow: hidden;line-height: 14px;margin-top: 4px; font-size:1.5em">
