--- a/html/menu.html
+++ b/html/menu.html
@@ -1,3 +1,19 @@
-<ul id="menu" class="treeview-menu menu-items">
-    <li v-for="menuitem in state.menuitems" class="menu-item" @click="trigger(menuitem)"><span>{{ menuitem.title }}</span></li>
-</ul>
+<div id="menu-projects" class="container nano">
+  <div v-show="loading" class="bar-loader"></div>
+  <div class="nano-content">
+    <div class="row row-equal">
+      <!-- item -->
+      <div v-for="menuitem in state.menuitems"  @click="trigger(menuitem)" class="col-xs-12 col-sm-4 project-menu">
+        <div class="project-menu-item-image">
+          <img :src="logoSrc(menuitem.thumbnail)" class="img-responsive">
+        </div>
+        <div class="project-menu-item-content">
+          <div class="project-menu-item-text">
+            <h4 class="project-menu-item-title">{{ menuitem.title }}</h4>
+            <div>{{ menuitem.description }}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
