--- a/html/menu.html
+++ b/html/menu.html
@@ -10,7 +10,7 @@
         <div class="project-menu-item-content">
           <div class="project-menu-item-text">
             <h4 class="project-menu-item-title">{{ menuitem.title }}</h4>
-            <div>{{ menuitem.description }}</div>
+            <div v-html="menuitem.description"></div>
           </div>
         </div>
       </div>
