gestione errori e apertura progetti

--- a/html/app.html
+++ b/html/app.html
@@ -62,7 +62,9 @@
   <!-- Add the sidebar's background. This div must be placed
        immediately after the control sidebar -->
   <div class="control-sidebar-bg"></div>
+  <!--full screen modal element-->
   <div class="modal fade modal-fullscreen force-fullscreen" id="full-screen-modal" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-labelledby="full-screen-modal" aria-hidden="true"></div>
+  <!---->
   <div id="credits" class="modal fade">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
