--- a/html/app.html
+++ b/html/app.html
@@ -13,7 +13,7 @@
       </div>
       <div v-if="user" class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          <li class="dropdown user">
+          <li class="dropdown user" v-if="numberOfProjectsInGroup > 1">
             <a href="#" @click="openProjectsMenu" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-th" aria-hidden="true"></i>
               <span> Cambia Mappa</span>
