aggiunta non ci sono altri progetti nel caso d un solo progetto cambio mappa

--- a/html/menu.html
+++ b/html/menu.html
@@ -14,6 +14,9 @@
           </div>
         </div>
       </div>
+      <div v-if="!state.menuitems.length" style="margin-left:15px;">
+        <h2>Non ci sono altri progetti in questo gruppo cartografico</h2>
+      </div>
     </div>
   </div>
 </div>
