--- a/html/app.html
+++ b/html/app.html
@@ -11,7 +11,7 @@
         <a v-if="logo_url" :href="logo_link" :target="logo_link_target" class=""><img :src="logo_url" style="height:40px"></a>
         <span class="">{{project_title}}</span>
       </div>
-      <div v-if="user" class="navbar-custom-menu">
+      <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
           <li class="dropdown user" v-if="numberOfProjectsInGroup > 1">
             <a href="#" @click="openProjectsMenu" class="dropdown-toggle" data-toggle="dropdown">
@@ -19,7 +19,7 @@
               <span> Cambia Mappa</span>
             </a>
           </li>
-          <li class="dropdown user user-menu">
+          <li v-if="user" class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-user"></i>
               <span class="hidden-xs">{{ user.username }}</span>
