--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -15,7 +15,7 @@
     <div v-show="panelsinstack" class="g3w-sidebarpanel">
       <div style="overflow: hidden;line-height: 14px;margin-top: 4px; font-size:1.5em">
           <h4 style="display: inline-block; font-weight: bold">{{ gui.title }}</h4>
-          <button class="glyphicon glyphicon-remove pull-right close-panel-button" style="top: 8px;" @click="closePanel"></button>
+          <button class="glyphicon glyphicon-remove pull-right close-panel-button"  @click="closePanel"></button>
       </div>
       <div id="g3w-sidebarpanel-placeholder" class="g3w-sidebarpanel-placeholder"></div>
     </div>
