fixed change map issue

--- a/html/sidebar-item.html
+++ b/html/sidebar-item.html
@@ -1,8 +1,8 @@
 <li  v-show="state.visible" class="treeview sidebaritem" :class="{'active': open}">
-  <a @click="onClickItem" href="#">
+  <a @click.prevent="onClickItem" href="#">
     <i :class="icon"></i>
     <span class="treeview-label">{{title | t}}</span>
-    <i class="fa fa-angle-left pull-right"></i>
+    <i v-if="collapsible" class="fa fa-angle-left pull-right"></i>
   </a>
   <div id="g3w-sidebarcomponent-placeholder"></div>
 </li>
