--- a/html/app.html
+++ b/html/app.html
@@ -23,10 +23,10 @@
           <navbarleftitems></navbarleftitems>
           <navbarrightitems></navbarrightitems>
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown user" v-if="numberOfProjectsInGroup > 1">
+            <li id="changemaps" class="dropdown user" v-if="numberOfProjectsInGroup > 1">
               <a href="#" @click="openProjectsMenu" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-th" aria-hidden="true"></i>
-                <span> Cambia Mappa</span>
+                <span v-t="'changemap'"></span>
               </a>
             </li>
             <li v-if="user" class="dropdown user user-menu">
