added frontend and changes some style

--- a/html/app.html
+++ b/html/app.html
@@ -55,6 +55,11 @@
                 <span>Credits</span>
               </a>
             </li>
+            <li v-if="frontendurl" class="dropdown">
+              <a :href="frontendurl">
+                <span><i class="fa fa-home"></i> Home</span>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
