--- a/index.js.html
+++ b/index.js.html
@@ -1,9 +1,10 @@
-<script src="./ext/jquery3/jquery-3.3.1.min.js"></script>
+<!--<script src="./ext/jquery3/jquery-3.3.1.min.js"></script>-->
+<!--<script src="./ext/popper/popper.min.js"></script>-->
+<!--<script src="./ext/bootstrap4/js/bootstrap.min.js"></script>-->
 <script src="./ext/jquery/jquery-2.2.1.min.js"></script>
-<script src="./ext/popper/popper.min.js"></script>
+<script src="./ext/bootstrap/js/bootstrap.min.js"></script>
 <script src="./ext/jquery-i18next/jquery-i18next.min.js"></script>
 <script src="./ext/jquery-ui/jquery-ui.min.js"></script>
-<script src="./ext/bootstrap4/js/bootstrap.min.js"></script>
 <script src="./ext/moment/moment.js"></script>
 <script src="./ext/moment/moment-with-locales.js"></script>
 <script src="./ext/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
