--- a/index.js.html
+++ b/index.js.html
@@ -1,10 +1,10 @@
 <!--<script src="./ext/jquery3/jquery-3.3.1.min.js"></script>-->
-<!--<script src="./ext/popper/popper.min.js"></script>-->
-<!--<script src="./ext/bootstrap4/js/bootstrap.min.js"></script>-->
 <script src="./ext/jquery/jquery-2.2.1.min.js"></script>
-<script src="./ext/bootstrap/js/bootstrap.min.js"></script>
 <script src="./ext/jquery-i18next/jquery-i18next.min.js"></script>
 <script src="./ext/jquery-ui/jquery-ui.min.js"></script>
+<script src="./ext/popper/popper.min.js"></script>
+<!--<script src="./ext/bootstrap4/js/bootstrap.min.js"></script>-->
+<script src="./ext/bootstrap/js/bootstrap.min.js"></script>
 <script src="./ext/moment/moment.js"></script>
 <script src="./ext/moment/moment-with-locales.js"></script>
 <script src="./ext/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
@@ -22,4 +22,6 @@
 <script src="./ext/jquery-fileDownload/jquery.fileDownload.js"></script>
 <script src="./ext/bootstrap-filestyle/bootstrap-filestyle.min.js"></script>
 <script src="./ext/select2/js/select2.min.js"></script>
-<script src="./ext/lazyload-css/lazyload-css.1.0.4.min.js"></script>
+<script src="./ext/ismobile/ismobile.min.js"></script>
+
+
