--- a/html/app.html
+++ b/html/app.html
@@ -32,7 +32,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li id="changemaps" class="dropdown user" v-if="numberOfProjectsInGroup > 1">
               <a href="#" @click="openProjectsMenu" class="dropdown-toggle" data-toggle="dropdown">
-                <i :class="g3wtemplate.getFontClass('grid')" aria-hidden="true"></i>
+                <i :class="g3wtemplate.getFontClass('change-map')" aria-hidden="true"></i>
                 <span v-t="'changemap'"></span>
               </a>
             </li>
