--- a/index.js.html
+++ b/index.js.html
@@ -5,6 +5,14 @@
 <script src="./ext/popper/popper.min.js"></script>
 <!--<script src="./ext/bootstrap4/js/bootstrap.min.js"></script>-->
 <script src="./ext/bootstrap/js/bootstrap.min.js"></script>
+<script src="./ext/bootbox/bootbox.min.js"></script>
+<script src="./ext/toastr/toastr.min.js"></script>
+<script src="./ext/lodash/lodash.min.js"></script>
+<script src="./ext/eventemitter/EventEmitter.min.js"></script>
+<script src="./ext/history/jquery.history.js"></script>
+<script src="./ext/signals/signals.min.js"></script>
+<script src="./ext/crossroads/crossroads.min.js"></script>
+<script src="./ext/vue/vue.min.js"></script>
 <script src="./ext/moment/moment.js"></script>
 <script src="./ext/moment/moment-with-locales.js"></script>
 <script src="./ext/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
