--- a/html/viewport.html
+++ b/html/viewport.html
@@ -5,7 +5,7 @@
     <div v-if="(showtitle && contentTitle) || previousTitle || (state.content.closable && state.content.aside)" class="close-panel-block">
       <div v-if="previousTitle" class="g3w_contents_back">
         <span  @click="gotoPreviousContent()">
-          <span :class="g3wtemplate.getFontClass('arrow-left')"></span> Torna  {{ previousTitle }}
+          <span :class="g3wtemplate.getFontClass('arrow-left')"></span>{{ previousTitle }}
         </span>
       </div>
       <button v-if="state.content.closable && state.content.aside" :class="g3wtemplate.getFontClass('close')" class="pull-right close-panel-button" @click="closeContent"></button>
