--- a/index.css.html
+++ b/index.css.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="./ext/icheck/skins/all.css">
 <link rel="stylesheet" href="./ext/magic-check/magic-check.min.css">
 <link rel='stylesheet' href='./ext/perfect-scrollbar/css/perfect-scrollbar.min.css'>
+<link rel='stylesheet' href="./ext/nanoscroller/nanoscroller.css">
 <link rel='stylesheet' href='./ext/datatables/datatables.min.css'>
 <link rel="stylesheet" href="./ext/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
 <link rel="stylesheet" href="./ext/select2/css/select2.min.css">
