--- a/index.js.html
+++ b/index.js.html
@@ -2,11 +2,11 @@
 <script src="./ext/jquery/jquery-2.2.1.min.js"></script>
 <script src="./ext/jquery-i18next/jquery-i18next.min.js"></script>
 <script src="./ext/jquery-ui/jquery-ui.min.js"></script>
-<script src="./ext/popper/popper.min.js"></script>
+<!--<script src="./ext/popper/popper.min.js"></script>-->
 <!--<script src="./ext/bootstrap4/js/bootstrap.min.js"></script>-->
 <script src="./ext/bootstrap/js/bootstrap.min.js"></script>
-<script src="./ext/bootbox/bootbox.min.js"></script>
 <script src="./ext/toastr/toastr.min.js"></script>
+<script src="./ext/bootbox/bootbox.min.js"></script>
 <script src="./ext/lodash/lodash.min.js"></script>
 <script src="./ext/eventemitter/EventEmitter.min.js"></script>
 <script src="./ext/history/jquery.history.js"></script>
