changes some less files

--- a/html/app.html
+++ b/html/app.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="main-navbar">
           <navbarleftitems></navbarleftitems>
           <navbarrightitems></navbarrightitems>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right app-navbar-nav">
             <li id="changemaps" class="dropdown user" v-if="numberOfProjectsInGroup > 1">
               <a href="#" @click="openProjectsMenu" class="dropdown-toggle" data-toggle="dropdown">
                 <i :class="g3wtemplate.getFontClass('change-map')" aria-hidden="true"></i>
