added anche changed styles

--- a/html/app.html
+++ b/html/app.html
@@ -75,7 +75,7 @@
   <!-- Left side column. contains the logo and sidebar -->
   <sidebar></sidebar>
   <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper" style="background-color:white">
+  <div class="content-wrapper">
     <viewport></viewport>
   </div>
   <!-- /.content-wrapper -->
