--- a/index.js.html
+++ b/index.js.html
@@ -28,5 +28,6 @@
 <script src="./ext/bootstrap-filestyle/bootstrap-filestyle.min.js"></script>
 <script src="./ext/select2/js/select2.min.js"></script>
 <script src="./ext/ismobile/ismobile.min.js"></script>
+<script src="./ext/split/split.min.js"></script>
 
 
