--- a/html/app.html
+++ b/html/app.html
@@ -14,15 +14,13 @@
           <a v-if="isMobile()" href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <i :class="g3wtemplate.getFontClass('bars')"></i>
           </a>
-          <div class="logo-wrapper" style="max-height: 30px">
-            <a v-if="logo_url" :href="logo_link" :target="logo_link_target" class="">
-              <img :src="logo_url" style="height:40px">
+          <div class="logo-wrapper">
+            <a v-if="logo_url" :href="logo_link" :target="logo_link_target" class="project_logo_link">
+              <img :src="logo_url">
             </a>
-            <div v-if="!isMobile()" style="display: inline-block; position: relative; top: -12px;">
-              <div style="display: flex; flex-direction: column; line-height: 80%;">
-                <span style="font-size: 24px;">{{ main_title }}</span>
-                <span style="font-size: 20px;">{{project_title}}</span>
-              </div>
+            <div v-if="!isMobile()" class="project_title_content">
+              <div class="main_title">{{ main_title }}</div>
+              <div class="sub_title">{{project_title}}</div>
             </div>
           </div>
         </div>
@@ -96,13 +94,14 @@
             <span aria-hidden="true">&times;</span>
           </button>
           <div style="display: flex; flex-direction: column; justify-content: space-around; justify-items: center; align-items: center">
-            <div class="g3w-credits-block">
-              <div v-t-template="'g3wSuiteFramework'" class="credit-title-logo"></div>
-              <a target="_blank" href="https://g3wsuite.gis3w.it/">
-                <img class="g3w-suite-logo" :src="g3w_suite_logo" alt="">
-              </a>
-            </div>
+            <div class="customcredits" v-if="!!customcredits" v-html="customcredits"></div>
             <div v-if="powered_by">
+              <div class="g3w-credits-block">
+                <div v-t-template="'g3wSuiteFramework'" class="credit-title-logo"></div>
+                <a target="_blank" href="https://g3wsuite.gis3w.it/">
+                  <img class="g3w-suite-logo" :src="g3w_suite_logo" alt="">
+                </a>
+              </div>
               <div v-t-template="'productOf'" class="credit-title-logo g3w-credits-block"></div>
               <a style="text-align: center!important;" href="http://www.gis3w.it" target="_blank">
                 <img :src="credits_logo" class="img-responsive center-block" alt="">
