removed nano nano content e setted slimscroll to sidebar to false

--- a/html/viewport.html
+++ b/html/viewport.html
@@ -20,5 +20,6 @@
         <span id="contenttitle">{{ contentTitle }}</span>
       </div>
     </div>
+    <div v-show="state.content.loading" class="bar-loader"></div>
   </div>
 </div>
