--- a/html/app.html
+++ b/html/app.html
@@ -28,6 +28,7 @@
           <navbarleftitems></navbarleftitems>
           <navbarrightitems></navbarrightitems>
           <ul class="nav navbar-nav navbar-right app-navbar-nav">
+            <header-link :state="state" v-for="state in customlinks"></header-link>
             <li id="changemaps" class="dropdown user" v-if="numberOfProjectsInGroup > 1">
               <a href="#" @click="openProjectsMenu" class="dropdown-toggle" data-toggle="dropdown">
                 <i :class="g3wtemplate.getFontClass('change-map')" aria-hidden="true"></i>
