--- a/html/headerlink.html
+++ b/html/headerlink.html
@@ -1,6 +1,6 @@
-<li class="customheaderlink dropdown user user-menu" >
+<li class="customheaderlink dropdown user user-menu" :title="state.title">
   <a :href="state.url" :class="{ imagelink : !!state.img}" target="_blank" class="dropdown-toggle">
-    <img height="40" width="40" v-if="state.img" :src="state.img">
+    <img height="40" v-if="state.img" :src="state.img">
     <span v-else>{{state.title}}</span>
   </a>
 </li>
