--- a/html/app.html
+++ b/html/app.html
@@ -47,7 +47,7 @@
                   </p>
                 </li>
                 <li class="user-footer">
-                  <div class="pull-left">
+                  <div class="pull-left" v-if="user.admin_url">
                     <a :href="user.admin_url" class="btn btn-default btn-flat"><i :class="g3wtemplate.getFontClass('folder')"></i> Admin</a>
                   </div>
                   <div class="pull-right">
