chenge credits ui and chenge some skin rules

--- a/html/app.html
+++ b/html/app.html
@@ -110,7 +110,7 @@
                   <h4>GIS3W s.n.c.</h4>
                 </div>
               </a>
-              <address id="address-credits" style="line-height: 2;">
+              <address id="address-credits" style="line-height: 2; text-align: center">
                 <i :class="g3wtemplate.getFontClass('marker')" aria-hidden="true"></i>
                 <span> Viale Verdi, 24 - Montecatini Terme (PT)</span></br>
                 <i :class="g3wtemplate.getFontClass('mobile')" aria-hidden="true"></i>
