--- a/html/app.html
+++ b/html/app.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <header class="main-header">
+  <header v-if="!isIframe" class="main-header">
     <!-- Logo -->
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -72,9 +72,9 @@
     </nav>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
-  <sidebar></sidebar>
+  <sidebar :iframe="isIframe"></sidebar>
   <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
+  <div class="content-wrapper" :style="{paddingTop: isIframe ? 0 : null}">
     <viewport></viewport>
   </div>
   <!-- /.content-wrapper -->
