--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,8 +1,8 @@
-<aside class="main-sidebar">
+<aside class="main-sidebar" :class="{iframe: iframe}">
   <!-- sidebar: style can be found in sidebar.less -->
   <!-- Sidebar toggle button-->
   <!-- Toggle button on the left side of main sidebar only if not mobile -->
-  <a v-if="!isMobile() && !iframe" href="#" class="sidebar-aside-toggle" data-toggle="offcanvas" role="button">
+  <a v-if="!isMobile()" href="#" class="sidebar-aside-toggle" data-toggle="offcanvas" role="button">
     <i :class="g3wtemplate.getFontClass('bars')"></i>
   </a>
 	<div id="g3w-sidebar" class="sidebar">
