fiexd issue on wher swith usermessage between two messages (added requestAnimationFrame on showusermessage) and handle othe positiononing and alignement of userm message on map

--- a/html/viewport.html
+++ b/html/viewport.html
@@ -9,6 +9,7 @@
         :draggable="usermessage.draggable"
         :closable="usermessage.closable"
         :position="usermessage.position"
+        :autoclose="usermessage.autoclose"
         :size="usermessage.size"
         :type="usermessage.type">
         <template v-if="hooks.header" v-slot:header>
