--- a/html/menu.html
+++ b/html/menu.html
@@ -2,7 +2,7 @@
   <div class="nano-content">
     <div class="row row-equal">
       <!-- item -->
-      <div v-for="menuitem in state.menuitems"  @click="trigger(menuitem)" class="col-xs-12 col-sm-4 project-menu">
+      <div v-for="menuitem in state.menuitems"  :key="menuitem.title" @click="trigger(menuitem)" class="col-xs-12 col-sm-4 project-menu">
         <div class="project-menu-item-image">
           <img :src="logoSrc(menuitem.thumbnail)" class="img-responsive">
         </div>
