--- a/html/navbarleftitems.html
+++ b/html/navbarleftitems.html
@@ -1,3 +1,3 @@
 <ul class="nav navbar-nav navbar-left">
-  <li v-for="item in items" :is="item"></li>
+  <li v-for="item in items" :is="item" :key="item.id"></li>
 </ul>
