removed toastr and viewerjs and moved vue-cookie.js inide vue folder

--- a/index.js.html
+++ b/index.js.html
@@ -15,9 +15,8 @@
 <script src="./ext/bootstrap-treeview/js/bootstrap-treeview.js"></script>
 <script src="./ext/slimScroll/jquery.slimscroll.min.js"></script>
 <script src="./ext/fastclick/fastclick.js"></script>
-<script src="./ext/vue-cookie.js"></script>
+<script src="./ext/vue/cookie/vue-cookie.js"></script>
 <script src="./ext/jquery-file-upload/jquery.fileupload.js"></script>
 <script src="./ext/jquery-fileDownload/jquery.fileDownload.js"></script>
 <script src="./ext/bootstrap-filestyle/bootstrap-filestyle.min.js"></script>
 <script src="./ext/ismobile/ismobile.min.js"></script>
-
