--- a/index.js.html
+++ b/index.js.html
@@ -7,6 +7,7 @@
 <script src="./ext/history/jquery.history.js"></script>
 <script src="./ext/signals/signals.min.js"></script>
 <script src="./ext/crossroads/crossroads.min.js"></script>
+<script src="./ext/vue/vue.min.js"></script>
 <script src="./ext/moment/moment.js"></script>
 <script src="./ext/moment/moment-with-locales.js"></script>
 <script src="./ext/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
