--- a/index.js.html
+++ b/index.js.html
@@ -15,6 +15,7 @@
 <script src="./ext/slimScroll/jquery.slimscroll.min.js"></script>
 <script src="./ext/fastclick/fastclick.js"></script>
 <script src="./ext/vue/vue.min.js"></script>
+<!--<script src="./ext/vue/vue-composition-api.min.js"></script>-->
 <script src="./ext/vue/cookie/vue-cookie.js"></script>
 <script src="./ext/jquery-file-upload/jquery.fileupload.js"></script>
 <script src="./ext/jquery-fileDownload/jquery.fileDownload.js"></script>
