--- a/html/app.html
+++ b/html/app.html
@@ -28,14 +28,14 @@
           <navbarleftitems></navbarleftitems>
           <navbarrightitems></navbarrightitems>
           <ul class="nav navbar-nav navbar-right app-navbar-nav">
-            <header-link :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[0]" :key="state.id"></header-link>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[0]" :key="state.id"></header-item>
             <li id="changemaps" class="dropdown user" v-if="numberOfProjectsInGroup > 1">
               <a href="#" @click="openProjectsMenu" class="dropdown-toggle" data-toggle="dropdown">
                 <i :class="g3wtemplate.getFontClass('change-map')" aria-hidden="true"></i>
                 <span v-t="'changemap'"></span>
               </a>
             </li>
-            <header-link :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[1]" :key="state.id"></header-link>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[1]" :key="state.id"></header-item>
             <li v-if="user" class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i :class="g3wtemplate.getFontClass('user')"></i>
@@ -57,19 +57,19 @@
                 </li>
               </ul>
             </li>
-            <header-link :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[2]" :key="state.id"></header-link>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[2]" :key="state.id"></header-item>
             <li class="dropdown user user-menu">
               <a href="#" data-toggle="modal" data-target="#credits" class="dropdown-toggle">
                 <span>Credits</span>
               </a>
             </li>
-            <header-link :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[3]" :key="state.id"></header-link>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[3]" :key="state.id"></header-item>
             <li v-if="frontendurl" class="dropdown">
               <a :href="frontendurl">
                 <span><i :class="g3wtemplate.getFontClass('home')"></i> Home</span>
               </a>
             </li>
-            <header-link :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[4]" :key="state.id"></header-link>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[4]" :key="state.id"></header-item>
           </ul>
         </div>
       </div>
