--- a/html/app.html
+++ b/html/app.html
@@ -28,13 +28,14 @@
           <navbarleftitems></navbarleftitems>
           <navbarrightitems></navbarrightitems>
           <ul class="nav navbar-nav navbar-right app-navbar-nav">
-            <header-link :state="state" v-for="state in customlinks" :key="state.url"></header-link>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[0]" :key="state.id"></header-item>
             <li id="changemaps" class="dropdown user" v-if="numberOfProjectsInGroup > 1">
               <a href="#" @click="openProjectsMenu" class="dropdown-toggle" data-toggle="dropdown">
                 <i :class="g3wtemplate.getFontClass('change-map')" aria-hidden="true"></i>
                 <span v-t="'changemap'"></span>
               </a>
             </li>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[1]" :key="state.id"></header-item>
             <li v-if="user" class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i :class="g3wtemplate.getFontClass('user')"></i>
@@ -56,16 +57,19 @@
                 </li>
               </ul>
             </li>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[2]" :key="state.id"></header-item>
             <li class="dropdown user user-menu">
               <a href="#" data-toggle="modal" data-target="#credits" class="dropdown-toggle">
                 <span>Credits</span>
               </a>
             </li>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[3]" :key="state.id"></header-item>
             <li v-if="frontendurl" class="dropdown">
               <a :href="frontendurl">
                 <span><i :class="g3wtemplate.getFontClass('home')"></i> Home</span>
               </a>
             </li>
+            <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[4]" :key="state.id"></header-item>
           </ul>
         </div>
       </div>
@@ -125,6 +129,11 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div id="custom_modal" class="modal fade">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content" v-html="current_custom_modal_content"></div>
     </div>
   </div>
 </div>
