--- a/html/sidebar-item.html
+++ b/html/sidebar-item.html
@@ -1,9 +1,20 @@
 <li  v-show="state.visible" class="treeview sidebaritem" :class="{'active': open}">
-  <a @click.prevent="onClickItem" ref="anchor_click" href="#">
-    <i :class="icon" :style="{color: iconColor}"></i>
-    <span class="treeview-label">{{title | t}}</span>
-    <span v-if="info.state" style="position: absolute; right: 5px; font-weight: bold" :class="info.class" :style="info.style" :title="info.tooltip">{{ info.state }}</span>
-    <span v-else-if="action" data-placement="right" data-toggle="tooltip" @click.stop="action.fnc" style="position: absolute; right: 5px; font-weight: bold" :class="action.class" class="skin-tooltip-right" :style="action.style" :title="action.tooltip"></span>
+  <a @click.prevent="onClickItem" ref="anchor_click" href="#" style="display: flex; justify-content: space-between; align-items: center">
+    <div>
+      <i :class="icon" :style="{color: iconColor}"></i>
+      <span class="treeview-label">{{title | t}}</span>
+    </div>
+    <div>
+      <span v-if="info.state" style="position: absolute; right: 5px; font-weight: bold" :class="info.class" :style="info.style" :title="info.tooltip">{{ info.state }}</span>
+      <span v-for="action in actions" :key="action.id" data-placement="right" data-toggle="tooltip"
+            @click.stop="action.fnc"
+            style="font-weight: bold; padding:3px;"
+            :class="action.class"
+            class="action skin-tooltip-right"
+            :style="action.style"
+            :title="action.tooltip">
+      </span>
+    </div>
     <i v-if="collapsible" :class="g3wtemplate.getFontClass('angle-left')" class="pull-right"></i>
   </a>
   <div id="g3w-sidebarcomponent-placeholder"></div>
