--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -8,7 +8,7 @@
 	<div id="g3w-sidebar" class="sidebar">
     <div id="disable-sidebar"></div>
     <div v-show="panelsinstack" class="g3w-sidebarpanel">
-      <div style="overflow: hidden;line-height: 14px;margin-top: 4px; font-size:1.5em">
+      <div id="g3w-sidebarpanel-header-placeholder" style="overflow: hidden;line-height: 14px;margin-top: 4px; font-size:1.5em">
           <h4 style="display: inline-block; font-weight: bold">{{ gui.title }}</h4>
           <span @click="closePanel" class="g3w-span-button close-pane-button fa-stack fa-lg pull-right">
             <i :class="g3wtemplate.getFontClass('circle')" class="fa-stack-1x panel-button"></i>
@@ -17,7 +17,7 @@
       </div>
       <div id="g3w-sidebarpanel-placeholder" class="g3w-sidebarpanel-placeholder"></div>
     </div>
-    <div id="g3w-sidebarcomponents-content">
+    <div id="g3w-sidebarcomponents-content" >
       <ul id="g3w-sidebarcomponents" v-show="showmainpanel" class="sidebar-menu"></ul>
     </div>
   </div>
