--- a/html/app.html
+++ b/html/app.html
@@ -60,10 +60,16 @@
             <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[2]" :key="state.id"></header-item>
             <li class="dropdown user user-menu">
               <a href="#" data-toggle="modal" data-target="#credits" class="dropdown-toggle">
+                <i :class="g3wtemplate.getFontClass('credits')" aria-hidden="true"></i>
                 <span>Credits</span>
               </a>
             </li>
             <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[3]" :key="state.id"></header-item>
+            <li v-if="languages" style="margin-top: 8px;">
+              <select class="form-control skin-color" v-model="language" style="cursor:pointer">
+                <option v-for="_language in languages" :key="_language[0]" :value="_language[0]" selected="_language[0] === language">{{_language[1]}}</option>
+              </select>
+            </li>
             <li v-if="frontendurl" class="dropdown">
               <a :href="frontendurl">
                 <span><i :class="g3wtemplate.getFontClass('home')"></i> Home</span>
