--- a/html/app.html
+++ b/html/app.html
@@ -2,9 +2,9 @@
   <header v-if="!isIframe" class="main-header">
     <!-- Logo -->
     <!-- Header Navbar: style can be found in header.less -->
-    <nav class="navbar navbar-inverse navbar-fixed-top g3w-nav" role="navigation">
-      <div class="container-fluid g3w-nav">
-        <div class="navbar-header g3w-nav">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -24,7 +24,7 @@
             </div>
           </div>
         </div>
-        <div class="collapse navbar-collapse g3w-nav" id="main-navbar">
+        <div class="collapse navbar-collapse" id="main-navbar">
           <navbarleftitems></navbarleftitems>
           <navbarrightitems></navbarrightitems>
           <ul class="nav navbar-nav navbar-right app-navbar-nav">
