--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -9,7 +9,7 @@
     <div id="disable-sidebar"></div>
     <div v-show="panelsinstack" class="g3w-sidebarpanel">
       <div id="g3w-sidebarpanel-header-placeholder" style="overflow: hidden;line-height: 14px;margin-top: 4px; font-size:1.5em">
-          <h4 style="display: inline-block; font-weight: bold">{{ gui.title }}</h4>
+          <h4 v-if="gui.title" style="display: inline-block; font-weight: bold" v-t="gui.title"></h4>
           <span @click="closePanel" class="g3w-span-button close-pane-button fa-stack fa-lg pull-right">
             <i :class="g3wtemplate.getFontClass('circle')" class="fa-stack-1x panel-button"></i>
             <i :class="g3wtemplate.getFontClass('close')" class="fa-stack-1x panel-icon"></i>
