--- a/html/viewport.html
+++ b/html/viewport.html
@@ -52,5 +52,27 @@
       </div>
     </div>
     <div v-show="state.content.loading" class="bar-loader"></div>
-  </div>
+  </div>  <transition name="fade" :duration="{ enter: 800, leave: 500 }">
+  <user-message
+          v-if="usermessage.show"
+          @close-usermessage="closeUserMessage"
+          :title="usermessage.title"
+          :message="usermessage.message"
+          :draggable="usermessage.draggable"
+          :closable="usermessage.closable"
+          :position="usermessage.position"
+          :autoclose="usermessage.autoclose"
+          :size="usermessage.size"
+          :type="usermessage.type">
+    <template v-if="hooks.header" v-slot:header>
+      <component :is="hooks.header"></component>
+    </template>
+    <template v-if="hooks.body" v-slot:body>
+      <component :is="hooks.body"></component>
+    </template>
+    <template v-if="hooks.footer" v-slot:footer>
+      <component :is="usermessage.hooks.footer"></component>
+    </template>
+  </user-message>
+</transition>
 </div>
