--- a/html/app.html
+++ b/html/app.html
@@ -65,7 +65,7 @@
               </a>
             </li>
             <header-item :state="state" @show-custom-modal-content="showCustomModalContent" v-for="state in custom_header_items_position[3]" :key="state.id"></header-item>
-            <li v-if="languages" style="margin-top: 8px;">
+            <li v-if="languages" style="margin-top: 9px; margin-left: 3px;">
               <select class="form-control skin-color" v-model="language" style="cursor:pointer">
                 <option v-for="_language in languages" :key="_language[0]" :value="_language[0]" selected="_language[0] === language">{{_language[1]}}</option>
               </select>
@@ -109,17 +109,10 @@
             <div v-if="powered_by">
               <div class="g3w-credits-block">
                 <div v-t-template="'g3wSuiteFramework'" class="credit-title-logo"></div>
-                <a target="_blank" href="https://g3wsuite.gis3w.it/">
-                  <img class="g3w-suite-logo" :src="g3w_suite_logo" alt="">
+                <a style="text-align: center!important;" href="http://www.gis3w.it" target="_blank">
+                  <img :src="credits_logo" class="img-responsive center-block" alt="">
                 </a>
               </div>
-              <div v-t-template="'productOf'" class="credit-title-logo g3w-credits-block"></div>
-              <a style="text-align: center!important;" href="http://www.gis3w.it" target="_blank">
-                <img :src="credits_logo" class="img-responsive center-block" alt="">
-                <div style="text-align: center!important; margin-bottom:10px; margin-top:30px; color:#000000">
-                  <h4>GIS3W s.n.c.</h4>
-                </div>
-              </a>
               <address id="address-credits" style="line-height: 2; text-align: center">
                 <i :class="g3wtemplate.getFontClass('marker')" aria-hidden="true"></i>
                 <span> Viale Verdi, 24 - Montecatini Terme (PT)</span></br>
